--- a/test.html
+++ b/test.html
@@ -3,62 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>URL Text Extractor</title>
+    <title>A Shitty Summarization tool</title>
 </head>
 <body>
-    <h1>URL Text Extractor</h1>
+    <h1>A Shitty Summarization tool</h1>
 
     <form id="urlForm">
         <label for="urlInput">Enter URL:</label>
         <input type="text" id="urlInput" name="url" required>
-        <button type="submit" id="extract">Extract</button>
+        <label for="length">Summary Length:</label>
+        <input type="number" id="length" name="length" required>
         <button type="submit" id="summary">Summarize</button>
     </form>
 
-    <div id="result">
-        <h2>Extracted Text:</h2>
-        <p id="extractedText"></p>
-    </div>
 
-    <div class="reult2">
+    <div class="result">
         <h2>Summarized Text:</h2>
         <p id="SummarizedText"></p>
     </div>
 
     <script>
-        document.getElementById("extract").addEventListener("click", function(event) {
-            event.preventDefault();
-
-            const url = document.getElementById("urlInput").value;
-            fetch('http://localhost:5000/extract-text', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ 'url': url }),
-            })
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById("extractedText").textContent = data.text_content;
-            })
-            .catch(error => console.error('Error:', error));
-        });
         document.getElementById("summary").addEventListener("click", function(event) {
             event.preventDefault();
 
             const url = document.getElementById("urlInput").value;
-            fetch('http://localhost:5000/summarize-text', {
+            const length = document.getElementById("length").value;
+            fetch('http://localhost:5000/summarize', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
-                body: JSON.stringify({ 'url': url }),
+                body: JSON.stringify({ 'url': url, 'length': +length }),
             })
             .then(response => response.json())
             .then(data => {
-                document.getElementById("SummarizedText").textContent = data.text_content;
+                document.getElementById("SummarizedText").textContent = data.summarized_text;
             })
-            .catch(error => console.error('Error:', error));
+            .catch(error => {
+                console.error('Error:', error);
+                console.log('Response Status:', error.response.status);
+                console.log('Response Text:', error.response.statusText);
+            });
+
         });
     </script>
 </body>
