--- a/test.html
+++ b/test.html
@@ -8,22 +8,27 @@
 <body>
     <h1>A Shitty Summarization tool</h1>
 
-    <form id="urlForm">
+    <form id="inputForm">
         <label for="urlInput">Enter URL:</label>
-        <input type="text" id="urlInput" name="url" required>
+        <input type="text" id="urlInput" name="url">
         <label for="length">Summary Length:</label>
         <input type="number" id="length" name="length" required>
-        <button type="submit" id="summary">Summarize</button>
+        <button type="submit" id="summaryURL">Summarize URL</button>
     </form>
 
+    <form id="textForm">
+        <label for="textInput">Paste Text:</label>
+        <textarea id="textInput" name="text" rows="5" cols="50"></textarea>
+        <button type="submit" id="summaryText">Summarize Text</button>
+    </form>
 
     <div class="result">
         <h2>Summarized Text:</h2>
-        <p id="SummarizedText"></p>
+        <p id="summarizedText"></p>
     </div>
 
     <script>
-        document.getElementById("summary").addEventListener("click", function(event) {
+        document.getElementById("summaryURL").addEventListener("click", function(event) {
             event.preventDefault();
 
             const url = document.getElementById("urlInput").value;
@@ -37,16 +42,37 @@
             })
             .then(response => response.json())
             .then(data => {
-                document.getElementById("SummarizedText").textContent = data.summarized_text;
+                document.getElementById("summarizedText").textContent = data.summarized_text;
             })
             .catch(error => {
                 console.error('Error:', error);
                 console.log('Response Status:', error.response.status);
                 console.log('Response Text:', error.response.statusText);
             });
+        });
 
+        document.getElementById("summaryText").addEventListener("click", function(event) {
+            event.preventDefault();
+
+            const text = document.getElementById("textInput").value;
+            const length = document.getElementById("length").value;
+            fetch('http://localhost:5000/summarize', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ 'text': text, 'length': +length }),
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById("summarizedText").textContent = data.summarized_text;
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                console.log('Response Status:', error.response.status);
+                console.log('Response Text:', error.response.statusText);
+            });
         });
     </script>
 </body>
 </html>
-
